Shell stuck forever spewing syslog
With 3.34.1
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to call back into JSAPI during the sweeping phase of GC. This is most likely caused by not destroying a Clutter actor or Gtk+ widget with ::destroy signals connected, but can also be caused by using the destroy(), dispose(), or remove() vfuncs. Because it would cra>
Nov 06 16:21:40 delly gnome-shell[5259]: == Stack trace for context 0x55bb9a8f85a0 ==
Nov 06 16:21:40 delly gnome-shell[5259]: The offending signal was app-state-changed on ShellAppSystem 0x55bb9b384430.
Nov 06 16:21:40 delly gnome-shell[5259]: == Stack trace for context 0x55bb9a8f85a0 ==
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to call back into JSAPI during the sweeping phase of GC. This is most likely caused by not destroying a Clutter actor or Gtk+ widget with ::destroy signals connected, but can also be caused by using the destroy(), dispose(), or remove() vfuncs. Because it would cra>
Nov 06 16:21:40 delly gnome-shell[5259]: == Stack trace for context 0x55bb9a8f85a0 ==
Nov 06 16:21:40 delly gnome-shell[5259]: The offending signal was app-state-changed on ShellAppSystem 0x55bb9b384430.
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to call back into JSAPI during the sweeping phase of GC. This is most likely caused by not destroying a Clutter actor or Gtk+ widget with ::destroy signals connected, but can also be caused by using the destroy(), dispose(), or remove() vfuncs. Because it would cra>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending signal was notify on ShellApp 0x55bb9ce03d00.
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to call back into JSAPI during the sweeping phase of GC. This is most likely caused by not destroying a Clutter actor or Gtk+ widget with ::destroy signals connected, but can also be caused by using the destroy(), dispose(), or remove() vfuncs. Because it would cra>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending signal was notify on ShellApp 0x55bb9ce03d00.
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to call back into JSAPI during the sweeping phase of GC. This is most likely caused by not destroying a Clutter actor or Gtk+ widget with ::destroy signals connected, but can also be caused by using the destroy(), dispose(), or remove() vfuncs. Because it would cra>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending signal was size-changed on ShellWM 0x55bb9b103e40.
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to call back into JSAPI during the sweeping phase of GC. This is most likely caused by not destroying a Clutter actor or Gtk+ widget with ::destroy signals connected, but can also be caused by using the destroy(), dispose(), or remove() vfuncs. Because it would cra>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending signal was window-left-monitor on MetaDisplay 0x55bb9af3a020.
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to call back into JSAPI during the sweeping phase of GC. This is most likely caused by not destroying a Clutter actor or Gtk+ widget with ::destroy signals connected, but can also be caused by using the destroy(), dispose(), or remove() vfuncs. Because it would cra>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending signal was window-entered-monitor on MetaDisplay 0x55bb9af3a020.
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().
Nov 06 16:21:40 delly gnome-shell[5259]: Attempting to run a JS callback during garbage collection. This is most likely caused by destroying a Clutter actor or GTK widget with ::destroy signal connected, or using the destroy(), dispose(), or remove() vfuncs. Because it would crash the application, it has been blocke>
Nov 06 16:21:40 delly gnome-shell[5259]: The offending callback was SourceFunc().